@@ -728,12 +728,20 @@
      [NTT]
 
  Changes between 0.9.8i and 0.9.8j  [xx XXX xxxx]
-  
+
+  *) Allow the CHIL engine to be loaded, whether the application is
+	 multithreaded or not. (This does not release the developer from the
+	 obligation to set up the dynamic locking callbacks.)
+	 [Sander Temme <sander@temme.net>]
+
   *) Update Configure code and WIN32 build scripts to support experimental
      code. This is surrounded by OPENSSL_EXPERIMENTAL_FOO and not compiled
      in by default. Using the configuration option "enable-experimental-foo"
      enables it. Use this option for JPAKE.
      [Steve Henson]
+
+  *) Use correct exit code if there is an error in dgst command.
+     [Steve Henson; problem pointed out by Roland Dirlewanger]
 
   *) Add JPAKE support, including demo authentication in s_client and
      s_server.
